# youtube-summarizer

./: Cargo.toml  Makefile  biome.json  package.json  vite.config.ts
crates/tube-rs/: Cargo.toml
crates/tube-rs/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  setting.rs
src/components/: SettingsModal.tsx
src/store/: SettingsProvider.tsx
src/types/: settings.ts
