[workspace]
resolver = "2"
members = ["crates/ffmpeg-audio", "crates/tube-rs", "src-tauri"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }
tokio = { version = "1", features = ["full"] }
regex = { version = "1.11" }
dotenv = "0.15"

[profile.dev]
incremental = true


[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
