[package]
name = "videomaestro"
version = "0.1.0"
description = "A powerful desktop app built with Tauri and ReactJS to manage videos from YouTube or similar platforms. Features include audio-to-text transcription, translation, summarization, and a user-friendly interface. Perfect for creators, researchers, and video enthusiasts!"
authors = ["bruce <bruceunx@outlook.com>"]
edition = "2021"
autobins = false
# default-run = "test"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "videomaestro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9", features = [] }
tauri-plugin-shell = "2.3"
rusqlite = { version = "0.32", features = ["bundled"] }
tube-rs = { path = "../crates/tube-rs/" }
ffmpeg-audio = { path = "../crates/ffmpeg-audio/" }

serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tokio.workspace = true
dotenv.workspace = true
regex.workspace = true

# mime = "0.3"
anyhow = "1.0"
futures-util = "0.3"
thiserror = "2.0"

[[bin]]
name = "videomaestro"
path = "src/main.rs"
